[package]
name = "rust_box"
version = "0.1.0"
edition = "2021"

[registries.crates-io]
protocal = "sparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = {version = "0.4.4", features = ["with-system-locale"]}
thousands = "0.2.0"
